# Cmake_homework

./: CMakeLists.txt  README.md  main.cpp  math_lib.c  math_lib.h
